src/objects/Orchestrated_Action_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orchestrated Action Log</relationshipLabel>
        <relationshipName>Orchestrated_Action_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Detail__c</fullName>
        <label>Action Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>ERP Create Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP Update Account</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Was_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Successful</label>
        <type>Checkbox</type>
    </fields>
    <label>Orchestrated Action Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Timestamp__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Action__c</columns>
        <columns>Was_Successful__c</columns>
        <columns>Action_Detail__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Batch_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Orchestrated Action Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestrated Action Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>